# gpu-burn

./: CMakeLists.txt  gpu_burn-drv.cu
